# camxiom

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  mkdocs.yml  package.xml
.github/workflows/: ci.yml
benchmarks/: calibrate_benchmark.cpp  projection_benchmark.cpp
cmake/: camxiomConfig.cmake.in
docs/: camera-models.md  getting-started.md  index.md
docs/api/: batch.md  calibration.md  camera-info.md  conversion.md  interop.md  jacobians.md  lut.md  projection.md  remap.md
docs/design/: architecture.md  error-handling.md  numerical-strategy.md  thread-safety.md
include/camxiom/: batch.hpp  batch64.hpp  calibration.hpp  camera_info_yaml.hpp  camxiom.hpp  compat.hpp  core.hpp  default_seed.hpp  jacobian.hpp  jacobian64.hpp  jacobian_batch.hpp  jacobian_batch64.hpp  jacobian_with_distortion_deriv64.hpp  lut.hpp  lut64.hpp  model.hpp  model_compare.hpp  opencv.hpp  projection.hpp  projection64.hpp  projection_template.hpp  remap.hpp  remap_kernel.hpp  ros.hpp  types.hpp  types64.hpp  validated_model.hpp  version.hpp
include/camxiom/calib/: convert.hpp  intrinsics.hpp
include/camxiom/init/: dlt_pnp.hpp  double_sphere.hpp  eucm.hpp  homography.hpp  kb4_fisheye.hpp  mei_omni.hpp  pinhole_opencv.hpp  pinhole_zhang.hpp  planar_observation.hpp
include/camxiom/internal/: constants.hpp
include/camxiom/opencv/: pnp.hpp
include/camxiom/optimizer/: pnp_flag.hpp  pnp_solver.hpp
src/: default_seed.cpp  dispatch.cpp  remap.cpp  remap_kernel.cpp  remap_rectify.cpp  remap_rectify.hpp  types.cpp
src/batch/: batch_parallel.hpp  double.cpp  float.cpp
src/calib/: convert.cpp  intrinsics.cpp  uncertainty_detail.hpp
src/compat/: camera_info_export.cpp  camera_info_yaml.cpp  factory.cpp  internal.hpp  ros.cpp
src/detail/: ds_forward.hpp  internal.hpp  projection_common.hpp  projection_models.hpp  projection_solve.cpp  simd_avx2.cpp  simd_avx2.hpp  simd_ds_eucm.cpp  simd_ds_eucm.hpp  simd_fisheye.cpp  simd_fisheye.hpp  simd_inverse.cpp  simd_inverse.hpp  simd_neon_compat.hpp  simd_pinhole.cpp  simd_pinhole.hpp
src/distortion/: angle.cpp  angle_impl.hpp  plane.cpp  plane_impl.hpp
src/double_sphere/: compat.cpp  projection.cpp  projection64.cpp  projection_impl.hpp
src/eucm/: compat.cpp  projection.cpp  projection64.cpp  projection_impl.hpp
src/fisheye/: compat.cpp  projection.cpp  projection64.cpp  projection_impl.hpp
src/init/: dlt_pnp.cpp  double_sphere.cpp  eucm.cpp  homography.cpp  init_detail.hpp  kb4_fisheye.cpp  mei_omni.cpp  pinhole_opencv.cpp  pinhole_zhang.cpp  seeded_planar_init.cpp  seeded_planar_init.hpp
src/jacobian/: batch.cpp  double.cpp  float.cpp  full_jacobian64_internal.hpp  jacobian_impl.hpp  with_distortion_deriv_double.cpp
src/lut/: lut.cpp
src/model/: distortion_aux.hpp  factory.cpp  internal.hpp  parse.cpp  validate.cpp  validate_impl.hpp  validated_model.cpp
src/omnidirectional/: compat.cpp  projection.cpp  projection64.cpp  projection_impl.hpp
src/opencv/: cv_api.cpp  image.cpp  internal.hpp  pnp.cpp  points.cpp
src/optimizer/pnp/: angle_axis_jacobian.hpp  pnp_cost_analytical_batch.cpp  pnp_cost_analytical_batch.hpp  pnp_gauss_newton.cpp  pnp_gauss_newton.hpp  pnp_parameter_bounds.hpp  pnp_solver.cpp
src/pinhole/: compat.cpp  projection.cpp  projection64.cpp  projection_impl.hpp
src/projection64/: dispatch.cpp  internal.hpp  validate.cpp
tests/: autodiff_jacobian_test.cpp  batch_parity_test.cpp  calib_intrinsics_test.cpp  calib_uncertainty_test.cpp  camera_info_yaml_test.cpp  compat_test.cpp  convenience_headers_test.cpp  default_seed_test.cpp  dlt_pnp_test.cpp  double_sphere_test.cpp  eucm_test.cpp  homography_test.cpp  integration_test.cpp  jacobian_batch_lut_test.cpp  kb4_fisheye_test.cpp  mei_omni_test.cpp  model_compare_test.cpp  model_convert_test.cpp  model_validate_test.cpp  opencv_interop_test.cpp  pinhole_opencv_test.cpp  pinhole_zhang_test.cpp  pnp_huber_test.cpp  projection_error_paths_test.cpp  projection_smoke_test.cpp  property_test.cpp  remap_kernel_test.cpp  remap_test.cpp  ros_compat_test.cpp  types_test.cpp  validated_model_test.cpp
tests/api_snapshot/: check_public_api.py  public_api.txt
tests/fixtures/: README.md
tests/support/: calib_test_fixtures.hpp
